Issue #10 - Footer is Misaligned fix. Issue was Max-width: 960px from p style being enfoced on footer p style. Unsetting this fixed the issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -228,6 +228,7 @@ footer {
 footer p {
     text-align: center;
     margin: 0 20px;
+    max-width: unset;
     padding-top: 16px;
     font-size: 14px;
     color: #cacaca;
